--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -15,3 +15,6 @@
 ## limitations under the License.
 ## ---------------------------------------------------------------------------
 quarkus.lambda.enable-polling-jvm-mode=true
+
+kafka.topic=quickstart
+kafka.brokers=localhost:9092
